# rbs_assets_library

./: .gitattributes  README.md  pyproject.toml
rbs_assets_library/: __init__.py
rbs_assets_library/asm_configs/: board_pick_and_place.yaml
rbs_assets_library/models/bishop/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/board/: Board.stl  board.dae  board.mtl  model.config  model.sdf  model.urdf
rbs_assets_library/models/chess_board/: model.config  model.sdf  model.sdf.md5
rbs_assets_library/models/hole/: model.urdf
rbs_assets_library/models/king/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/knight/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/pawn/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/peg/: model.config  model.urdf
rbs_assets_library/models/peg-in-hole/: model.config  model.urdf
rbs_assets_library/models/queen/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/rook/: model.config  model.sdf  model.sdf.md5  model.urdf
rbs_assets_library/models/round/: model.config  model.urdf  round.dae
rbs_assets_library/models/square/: model.config  model.urdf  square.dae
rbs_assets_library/models/star/: model.config  model.urdf  star.dae
rbs_assets_library/textures/DiamondPlate006C_2K-JPG/: DiamondPlate006C_2K-JPG.mtlx  DiamondPlate006C_2K-JPG.usdc
rbs_assets_library/worlds/: default.sdf
scripts/: get_cnos_data.py  get_inertial_parameters.py
(+35 files in other folders)
